# storyteller

./: .dockerignore  .gitignore  Dockerfile  IMPROVEMENTS.md  LICENSE  README.md  pyproject.toml
docs/: flow.md  hybrid_architecture.md
story_engine/: __init__.py
story_engine/api/: main.py
story_engine/core/: __init__.py  assembler.py  dag_builder.py  edge_context_designer.py  engine.py  executor.py  planner.py  propagator.py  repair.py  spec_builder.py  state_manager.py
story_engine/generation/: __init__.py  prompt_builder.py  scene_generator.py  state_diff_extractor.py  style_selector.py
story_engine/llm/: __init__.py  client.py  json_runner.py  parser.py  retry.py  router.py  sanitizer.py
story_engine/memory/: __init__.py  character_state.py  narrative_state.py  safety_state.py  style_state.py  world_state.py
story_engine/models/: __init__.py  base.py  edge.py  llm_contracts.py  node.py  scene.py  state_diff.py  story_spec.py
story_engine/observability/: __init__.py  logging_config.py
story_engine/prompts/: diff_extraction_prompt.yaml  edge_context_prompt.yaml  planner_acts_prompt.yaml  planner_prompt.yaml  planner_scenes_prompt.yaml  repair_prompt.yaml  scene_generation.yaml  semantic_verifier_prompt.yaml  spec_builder_prompt.yaml
story_engine/retrieval/: __init__.py  patterns.py
story_engine/storage/: __init__.py  sqlite_log.py
story_engine/verification/: __init__.py  character.py  chronology.py  invariants.py  safety.py  (+4 more)
tests/: test_llm_basic.py  test_llm_components.py  test_llm_endpoint.py  test_prompt_rendering.py  test_story_engine.py
(+1 files in other folders)
